Fix text alignment for RTL quoted messages

--- a/Signal/stylesheets/manifest.css
+++ b/Signal/stylesheets/manifest.css
@@ -3785,6 +3785,7 @@ body.dark-theme {
   font-size: 14px;
   line-height: 18px;
   color: #17191d;
+  text-align: start;
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
